--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 InitialProject/.vs/TravelAgency/FileContentIndex/6576c3a4-3d24-4e36-a470-d9c96e5341ef.vsidx
 InitialProject/.vs/TravelAgency/FileContentIndex/78c1b693-8664-4ef5-8026-35d9e4fd977e.vsidx
 *.vsidx
+InitialProject/obj
+InitialProject/bin
+
