--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ InitialProject/.vs/TravelAgency/FileContentIndex/78c1b693-8664-4ef5-8026-35d9e4f
 InitialProject/obj
 InitialProject/bin
 
+InitialProject/.vs/TravelAgency/v17/.suo
