--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ bin
 *.v2
 *.v2
 InitialProject/.vs/TravelAgency/v17/.suo
+InitialProject/.vs/ProjectEvaluation/travelagency.metadata.v6.1
+InitialProject/.vs/ProjectEvaluation/travelagency.projects.v6.1
