--- a/InitialProject/InitialProject/TravelAgency.csproj
+++ b/InitialProject/InitialProject/TravelAgency.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.Graph" Version="5.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\RepositoryInterfaces\" />
+  </ItemGroup>
+
 </Project>
