--- a/InitialProject/InitialProject/TravelAgency.csproj
+++ b/InitialProject/InitialProject/TravelAgency.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Domain\RepositoryInterfaces\" />
+    <Folder Include="Storage\" />
   </ItemGroup>
 
 </Project>
