--- a/InitialProject/InitialProject/TravelAgency.csproj
+++ b/InitialProject/InitialProject/TravelAgency.csproj
@@ -15,11 +15,36 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Images\confetti.jpeg" />
+    <None Remove="Resources\Images\confetti.jpg" />
+    <None Remove="Resources\Images\facebook-logo-493.png" />
+    <None Remove="Resources\Images\logo-instagram-png-2430.png" />
+    <None Remove="Resources\Images\logo-twitter-png-5859.png" />
+    <None Remove="Resources\Images\Ta.jpg" />
+    <None Remove="View\Guest1\confetti.jpeg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="facebook-logo-493.png" />
+    <None Include="logo-instagram-png-2430.png" />
+    <None Include="logo-twitter-png-5859.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Cake.Core" Version="3.0.0" />
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="DevExpress.Data" Version="22.2.5" />
     <PackageReference Include="Microsoft.Graph" Version="5.1.0" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Images\confetti.jpg" />
+    <Resource Include="Resources\Images\facebook-logo-493.png" />
+    <Resource Include="Resources\Images\logo-instagram-png-2430.png" />
+    <Resource Include="Resources\Images\logo-twitter-png-5859.png" />
+    <Resource Include="Resources\Images\Ta.jpg" />
+    <Resource Include="View\Guest1\confetti.jpeg" />
   </ItemGroup>
 
 </Project>
