--- a/InitialProject/InitialProject/TravelAgency.csproj
+++ b/InitialProject/InitialProject/TravelAgency.csproj
@@ -15,19 +15,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Images\apartment.jpg" />
     <None Remove="Resources\Images\confetti.jpeg" />
     <None Remove="Resources\Images\confetti.jpg" />
+    <None Remove="Resources\Images\emptystar.png" />
     <None Remove="Resources\Images\facebook-logo-493.png" />
+    <None Remove="Resources\Images\fullstar.png" />
+    <None Remove="Resources\Images\halfstar.png" />
+    <None Remove="Resources\Images\hotel.jpg" />
+    <None Remove="Resources\Images\hut.jpg" />
     <None Remove="Resources\Images\logo-instagram-png-2430.png" />
     <None Remove="Resources\Images\logo-twitter-png-5859.png" />
     <None Remove="Resources\Images\Ta.jpg" />
-    <None Remove="View\Guest1\confetti.jpeg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="facebook-logo-493.png" />
-    <None Include="logo-instagram-png-2430.png" />
-    <None Include="logo-twitter-png-5859.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,12 +38,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Images\apartment.jpg" />
     <Resource Include="Resources\Images\confetti.jpg" />
+    <Resource Include="Resources\Images\emptystar.png" />
     <Resource Include="Resources\Images\facebook-logo-493.png" />
+    <Resource Include="Resources\Images\fullstar.png" />
+    <Resource Include="Resources\Images\halfstar.png" />
+    <Resource Include="Resources\Images\hotel.jpg" />
+    <Resource Include="Resources\Images\hut.jpg" />
     <Resource Include="Resources\Images\logo-instagram-png-2430.png" />
     <Resource Include="Resources\Images\logo-twitter-png-5859.png" />
     <Resource Include="Resources\Images\Ta.jpg" />
-    <Resource Include="View\Guest1\confetti.jpeg" />
   </ItemGroup>
 
 </Project>
