--- a/InitialProject/InitialProject/TravelAgency.csproj
+++ b/InitialProject/InitialProject/TravelAgency.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <None Remove="Resources\Images\apartment.jpg" />
+    <None Remove="Resources\Images\camera.png" />
     <None Remove="Resources\Images\confetti.jpeg" />
     <None Remove="Resources\Images\confetti.jpg" />
     <None Remove="Resources\Images\emptystar.png" />
@@ -26,6 +27,7 @@
     <None Remove="Resources\Images\hut.jpg" />
     <None Remove="Resources\Images\logo-instagram-png-2430.png" />
     <None Remove="Resources\Images\logo-twitter-png-5859.png" />
+    <None Remove="Resources\Images\profilepic.jpg" />
     <None Remove="Resources\Images\Ta.jpg" />
   </ItemGroup>
 
@@ -33,12 +35,14 @@
     <PackageReference Include="Cake.Core" Version="3.0.0" />
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="DevExpress.Data" Version="22.2.5" />
+    <PackageReference Include="MahApps.Metro" Version="2.4.9" />
     <PackageReference Include="Microsoft.Graph" Version="5.1.0" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Resources\Images\apartment.jpg" />
+    <Resource Include="Resources\Images\camera.png" />
     <Resource Include="Resources\Images\confetti.jpg" />
     <Resource Include="Resources\Images\emptystar.png" />
     <Resource Include="Resources\Images\facebook-logo-493.png" />
@@ -48,6 +52,7 @@
     <Resource Include="Resources\Images\hut.jpg" />
     <Resource Include="Resources\Images\logo-instagram-png-2430.png" />
     <Resource Include="Resources\Images\logo-twitter-png-5859.png" />
+    <Resource Include="Resources\Images\profilepic.jpg" />
     <Resource Include="Resources\Images\Ta.jpg" />
   </ItemGroup>
 
