--- a/InitialProject/InitialProject/TravelAgency.csproj
+++ b/InitialProject/InitialProject/TravelAgency.csproj
@@ -72,4 +72,8 @@
     <Resource Include="View\Owner\profilepic.jpg" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\Diagrams\" />
+  </ItemGroup>
+
 </Project>
